After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696357 - Basesrc may send not-neg error when flushed
Basesrc may send not-neg error when flushed
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
1.x
Other Linux
: Normal normal
: 1.0.7
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 696461
 
 
Reported: 2013-03-22 01:06 UTC by Nicolas Dufresne (ndufresne)
Modified: 2013-04-15 06:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] basesrc: Don't send error if negotiate fails because we are flushing (996 bytes, patch)
2013-03-22 01:10 UTC, Nicolas Dufresne (ndufresne)
none Details | Review

Description Nicolas Dufresne (ndufresne) 2013-03-22 01:06:33 UTC
Basesrc may send error when flushed. This is because it does not properly detect this case when negotiation fails and assume it's a real failure.
Comment 1 Nicolas Dufresne (ndufresne) 2013-03-22 01:10:38 UTC
Created attachment 239512 [details] [review]
[PATCH] basesrc: Don't send error if negotiate fails because we are flushing


Negotiation may be aborted by a flush from another thread that need to
stop the task (i.e. seek). Check that case and silently pause the task.
---
 libs/gst/base/gstbasesrc.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Comment 2 Sebastian Dröge (slomo) 2013-03-25 07:57:33 UTC
commit 253035d395310b4a0aa6802a7f7844f866810626
Author: Nicolas Dufresne <nicolas.dufresne@collabora.co.uk>
Date:   Thu Mar 21 21:00:54 2013 -0400

    basesrc: Don't send error if negotiate fails because we are flushing
    
    Negotiation may be aborted by a flush from another thread that need to
    stop the task (i.e. seek). Check that case and silently pause the task.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=696357